# nucleo.dart

./: .gitignore  ffigen.yaml  pubspec.yaml
hook/: build.dart
lib/: nucleo_dart.dart  nucleo_dart_bindings.dart
nix/: build.nix
rust/: Cargo.toml  nucleo_dart.h
rust/src/: lib.rs
test/: build_test.dart
