[package]
name = "nucleo_dart"
version = "0.1.0"
edition = "2024"

[lib]
name = "nucleo_dart"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev="5b74652e482f7c07d827f18c6d21e7540c242c69" }

[profile.release]
lto = true
codegen-units = 1
